--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 * {
   font-size: 100%;
-  /* list-style: 1; */
+  line-height: 1;
   font-size: 14px;
   font-family: Montserrat;
   color: black;
@@ -31,7 +31,9 @@
   top: 0px;
   object-fit: cover;
 }
+
 /*------------шапка---------*/
+
 .header {
   position: fixed;
   background-color: rgba(250, 249, 249, 0.342);
@@ -93,7 +95,9 @@
   font-weight: 600;
   line-height: calc(24 / 14 * 100%);
 }
-/* -page--------------------------------*/
+
+/*------PAGE-----------------------*/
+
 .page {
   flex: 1 1 auto;
 }
@@ -104,10 +108,55 @@
   z-index: 2;
   margin: -111px 0 0 0;
 }
-/* ------------подвал-----------------*/
+.page_advantages {
+}
+.page_practice {
+}
+.page_whoweare {
+}
+.page_clients:not(:last-child) {
+  margin: 0 0 10px 0;
+}
+.page_subscribe {
+}
+
+/* -header block--------------------------------*/
+
+.header-block {
+  text-align: center;
+  letter-spacing: 0.2px;
+}
+.header-block_title {
+  line-height: 142%;
+  font-weight: 700;
+  font-size: 40px;
+  color: #252b42;
+}
+.header-block_title:not(:last-child) {
+  margin: 0 0 10px 0;
+}
+.header-block_sub-title {
+  color: #737373;
+  font-size: 16px;
+  line-height: 24px;
+}
+@media (max-width: 992px) {
+  .header-block_title {
+    font-size: 35px;
+  }
+}
+@media (max-width: 767px) {
+  .header-block_title {
+    font-size: 30px;
+  }
+}
+/* ------------подвал---------------------------*/
+
 .footer {
 }
-/* --------main_block--------*/
+
+/* --------main_block----------------------*/
+
 .main-block {
   position: relative;
 }
@@ -219,17 +268,39 @@
 .services_container {
 }
 .services_body {
-  display: flex;
-  margin: 0px -15px;
+}
+@media (min-width: 670px) {
+  .services_body {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0px -15px -30px;
+  }
 }
 .services_column {
   padding: 0px 15px;
   flex: 0 1 33.333%;
+  margin: 0 0 30px 0;
 }
-.service_item {
-  box-shadow: 0px 13px 19px rgba(0, 0, 0, 0.07);
+
+@media (max-width: 992px) {
+  .services_column {
+    flex: 0 1 50%;
+  }
+  .services_column:last-child {
+    flex: 0 1 100%;
+  }
+}
+
+.services_item {
+  height: 100%;
+  box-shadow: 0px 13px 19px rgba(0, 0, 0, 0.247);
   background-color: #fff;
   padding: 35px;
+}
+@media (min-width: 479px) {
+  .services_item {
+    padding: 25px;
+  }
 }
 
 .item-service {
@@ -260,4 +331,370 @@
   font-weight: 500;
   font-size: 14px;
   line-height: 142%;
+}
+/*-----advantages--*/
+
+.advantages {
+  padding: 80px 0;
+}
+@media (max-width: 992px) {
+  .advantages {
+    padding: 50px 0;
+  }
+}
+@media (max-width: 767px) {
+  .advantages {
+    padding: 30px 0;
+  }
+}
+.advantages_container {
+}
+
+.advantages_header {
+  margin: 0 0 50px 0;
+}
+.advantages_body {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0px -15px -30px;
+}
+.advantages_column {
+  padding: 0 15px;
+  margin: 0 0 30px 0;
+  flex: 0 1 25%;
+}
+@media (max-width: 1000px) {
+  .advantages_column {
+    flex: 0 1 50%;
+  }
+}
+@media (max-width: 560px) {
+  .advantages_column {
+    flex: 0 1 100%;
+  }
+}
+.advantages_item {
+  text-align: center;
+  height: 100%;
+  background-color: #fff;
+  font-weight: 700;
+  box-shadow: 0px 13px 19px rgba(0, 0, 0, 0.199);
+  padding: 35px;
+}
+.advantages_item > *:not(:last-child) {
+  margin: 0 0 10px 0;
+}
+.advantages_icon {
+  height: 48px;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+}
+.advantages_value {
+  color: #252b42;
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 142%;
+}
+.advantages_text {
+  letter-spacing: 0.1px;
+  color: #737373;
+  font-size: 16px;
+  line-height: 150%;
+}
+/* practice------------------------*/
+
+.practice {
+  padding: 125px 0 80px 0;
+}
+
+@media (max-width: 993px) {
+  .practice {
+    padding: 40px 0 80px 0;
+  }
+}
+@media (max-width: 767px) {
+  .practice {
+    padding: 0 0 40px 0;
+  }
+}
+.practice_container {
+}
+.practice_header {
+  margin: 0 0 45px 0;
+}
+@media (max-width: 767px) {
+  .practice_header {
+    padding: 0 0 25px 0;
+  }
+}
+.practice_body {
+  margin: 0 -20px -30px;
+  display: flex;
+  flex-wrap: wrap;
+}
+.practice_column {
+  padding: 0 20px;
+  margin: 0 0 30px 0;
+  flex: 0 1 25%;
+}
+
+@media (max-width: 1040px) {
+  .practice_column {
+    flex: 0 1 50%;
+  }
+}
+@media (max-width: 630px) {
+  .practice_column {
+    flex: 0 1 100%;
+  }
+}
+
+.practice-item {
+}
+
+.item-practice {
+  background-color: #fff;
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+}
+.item-practice_content {
+  padding: 30px;
+  flex: 1 1 auto;
+}
+.item-ptactice_link {
+  color: #252b42;
+  display: inline-block;
+}
+.item-ptactice_link:hover {
+  text-decoration: underline;
+}
+.item-ptactice_link:not(:last-child) {
+  margin: 0 0 15px 0;
+}
+
+.item-practice_title {
+  letter-spacing: 0.1px;
+  font-size: 16px;
+  line-height: 150%;
+  font-weight: 700;
+}
+.item-practice_text {
+  color: #737373;
+  line-height: 142%;
+}
+.item-practice_image {
+  display: block;
+  padding: 0 0 60% 0;
+}
+.item-practice_image:hover {
+  transform: scale(1.2);
+}
+
+/*whoweare------------------*/
+
+.whoweare {
+  padding: 80px 0 130px 0;
+}
+
+.whoweare_container {
+}
+.whoweare_header {
+  margin: 0 0 100px 0;
+}
+
+.whoweare_body {
+  display: flex;
+  align-items: flex-start;
+}
+
+.whoweare_video {
+  flex: 0 0 57%;
+  position: relative;
+  padding: 0 0 42.25% 0;
+  box-shadow: 0px 13px 19px rgba(0, 0, 0, 0.192);
+}
+.whoweare_video iframe {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  object-fit: cover;
+}
+
+.whoweare_content {
+  flex: 1 1 auto;
+  padding: 20px 0 0 121px;
+}
+@media (max-width: 1080px) {
+  .whoweare_content {
+    padding: 0 0 0 50px;
+  }
+}
+
+.whoweare_title {
+  font-weight: 800;
+  color: #252b42;
+  font-size: 40px;
+  line-height: 142%;
+  letter-spacing: 0.2px;
+}
+
+.whoweare_title:not(:last-child) {
+  margin: 0 0 10px 0;
+}
+.whoweare_text {
+  color: #737373;
+  line-height: 142%;
+  margin: 0 0 50px 0;
+}
+
+.whoweare_item {
+}
+.whoweare_item:not(:last-child) {
+  margin: 0 0 30px 0;
+}
+.item-whoweare {
+  display: flex;
+}
+.item-whoweare_icon {
+  flex: 0 0 32px;
+}
+.item-whoweare_body {
+  flex: 1 1 auto;
+  padding: 0 0 0 20px;
+}
+.item-whoweare_title {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 150%;
+}
+.item-whoweare_title:not(:last-child) {
+  margin: 0 0 5px 0;
+}
+.item-whoweare_text {
+  color: #737373;
+  white-space: nowrap;
+  line-height: 142%;
+  width: 225px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+@media (max-width: 950px) {
+  .whoweare {
+    padding: 50px 50px 0 0;
+  }
+  .whoweare_body {
+    flex-direction: column-reverse;
+    align-items: stretch;
+  }
+
+  .whoweare_title {
+    font-size: 24px;
+  }
+
+  .whoweare_content {
+    padding: 0 0 0 0;
+  }
+
+  .whoweare_video {
+    padding: 0 0 56.25% 0;
+  }
+
+  .whoweare_video:not(:last-child) {
+    margin: 50px 0 0 0;
+  }
+
+  .whoweare_header {
+    margin: 0 0 30px 0;
+  }
+  .item-whoweare_text {
+    width: 100%;
+    white-space: normal;
+  }
+}
+
+/*clients---------------------------*/
+
+.clients {
+  padding: 50px 0;
+}
+.clients_container {
+}
+.clients_items {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.clients_item {
+  padding: 8px 15px;
+  flex: 0 1 16.6667%;
+  text-align: center;
+  min-width: 140px;
+}
+.clients_item img {
+  max-width: 100%;
+}
+
+@media (max-width: 767px) {
+  .clients {
+    padding: 30px 0;
+  }
+}
+
+/*--subscribe------------------*/
+
+.subscribe {
+}
+.subscribe_container {
+}
+.subscribe_body {
+  margin: 0 30px;
+  display: flex;
+  justify-content: space-between;
+  padding: 30px 50px;
+  align-items: center;
+  background-color: #17213c;
+  border-radius: 2px;
+}
+.subscribe_title {
+  color: #fff;
+  max-width: 266px;
+  font-size: 133%;
+  line-height: 32px;
+  font-weight: 700;
+  letter-spacing: 0.1px;
+}
+.subscribe_form {
+  flex: 0 1 50%;
+  display: flex;
+  align-items: center;
+}
+.subscribe_input {
+  flex: 1 1 auto;
+  min-height: 58px;
+  padding: 0 20px;
+  background: #f9f9f9;
+  color: #737373;
+  padding: 0 20px;
+  border: 1px solid #e6e6e6;
+  box-sizing: border-box;
+  border-radius: 5px 0 0px 5px;
+}
+
+.subscribe_button {
+  background: #ff7b47;
+  border: 1px solid #e6e6e6;
+  border-radius: 0px 5px 5px 0px;
+  display: flex;
+  min-height: 58px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: #fff;
+  padding: 0 22px;
 }
