--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@
 
 .header {
   position: fixed;
-  background-color: rgba(250, 249, 249, 0.342);
+  background-color: rgba(247, 247, 247, 0.384);
   width: 100%;
   left: 0;
   top: 0;
@@ -45,7 +45,7 @@
 
 .header__container {
   display: flex;
-  min-height: 104px;
+  min-height: 70px;
   align-items: center;
 }
 @media (max-width: 479px) {
@@ -55,7 +55,7 @@
 }
 
 .header_logo {
-  font-size: 24px;
+  font-size: 30px;
   font-weight: 700;
   color: inherit;
 }
@@ -92,7 +92,7 @@
 
 .menu_link {
   color: #737373;
-  font-weight: 600;
+  font-weight: 700;
   line-height: calc(24 / 14 * 100%);
 }
 
@@ -112,6 +112,8 @@
 }
 .page_practice {
 }
+.paige_main-container {
+}
 .page_whoweare {
 }
 .page_clients:not(:last-child) {
@@ -119,7 +121,10 @@
 }
 .page_subscribe {
 }
-
+.page_getintouch {
+}
+.page_contact {
+}
 /* -header block--------------------------------*/
 
 .header-block {
@@ -159,8 +164,6 @@
 
 .main-block {
   position: relative;
-}
-.paige_main-container {
 }
 .main-block_body {
   padding: 184px 0 191px 0;
@@ -649,41 +652,85 @@
 /*--subscribe------------------*/
 
 .subscribe {
+  position: relative;
+  padding: 0 0 20px 0;
+}
+.subscribe:before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 77px;
+  left: 0;
+  background: #252b42;
 }
 .subscribe_container {
 }
 .subscribe_body {
-  margin: 0 30px;
-  display: flex;
-  justify-content: space-between;
+  position: relative;
+  z-index: 2;
   padding: 30px 50px;
   align-items: center;
   background-color: #17213c;
   border-radius: 2px;
 }
+
+@media (min-width: 1070px) {
+  .subscribe_body {
+    margin: 0 30px;
+  }
+}
+
 .subscribe_title {
   color: #fff;
-  max-width: 266px;
   font-size: 133%;
+  margin: 0;
   line-height: 32px;
   font-weight: 700;
   letter-spacing: 0.1px;
 }
+
+@media (max-width: 810px) {
+  .subscribe_title {
+    margin: 0 0 20px 0;
+  }
+
+  .subscribe_body {
+    margin: 0 -15px;
+    padding: 20px 25px;
+  }
+}
+
+@media (min-width: 810px) {
+  .subscribe_title {
+    max-width: 266px;
+  }
+  .subscribe_body {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
 .subscribe_form {
   flex: 0 1 50%;
   display: flex;
   align-items: center;
 }
 .subscribe_input {
+  width: 100%;
   flex: 1 1 auto;
   min-height: 58px;
-  padding: 0 20px;
   background: #f9f9f9;
-  color: #737373;
+  color: #73737371;
   padding: 0 20px;
   border: 1px solid #e6e6e6;
+  border-right: 0;
   box-sizing: border-box;
   border-radius: 5px 0 0px 5px;
+}
+
+.subscribe_input:focus {
+  color: black;
 }
 
 .subscribe_button {
@@ -697,4 +744,186 @@
   text-align: center;
   color: #fff;
   padding: 0 22px;
+}
+@media (max-width: 810px) {
+  .subscribe_button {
+    padding: 0 10px;
+  }
+}
+/*--GET IN TOUCH-------*/
+
+.getintouch {
+  padding: 80px 0 135px 0;
+}
+
+@media (max-width: 992px) {
+  .getintouch {
+    padding: 50px 0 50px 0;
+  }
+}
+
+.getintouch-container {
+}
+
+.getintouch_header {
+  margin: 0 0 80px 0;
+}
+
+@media (max-width: 992px) {
+  .getintouch_header {
+    margin: 0 0 30px 0;
+  }
+}
+
+.getintouch-items {
+  margin: 0 -15px;
+}
+
+@media (min-width: 992px) {
+  .getintouch-items {
+    margin: 0;
+    display: flex;
+    align-items: center;
+  }
+}
+
+.getintouch-item {
+  flex: 0 1 33.333%;
+}
+
+.item-getintouch {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #fff;
+  padding: 50px 15px;
+  box-shadow: 0px 13px 19px rgba(0, 0, 0, 0.192);
+}
+.item-getintouch_purp {
+  background: #252b42;
+  padding: 80px 15px;
+}
+
+@media (max-width: 992px) {
+  .item-getintouch_purp {
+    padding: 50px 0;
+  }
+}
+.item-getintouch > *:not(:last-child) {
+  margin: 0 0 15px 0;
+}
+
+.item-getintouch_cion {
+}
+
+.item-getintouch_emails {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.item-getintouch_email {
+  color: inherit;
+  font-weight: 600;
+  line-height: 150%;
+  font-size: 16px;
+  color: #252b42;
+}
+.item-getintouch_purp .item-getintouch_email {
+  color: #fff;
+}
+
+.item-getintouch_email:hover {
+  transform: scale(1.1);
+}
+
+.item-getintouch_label {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 150%;
+  color: #252b42;
+}
+.item-getintouch_purp .item-getintouch_label {
+  color: #fff;
+}
+.item-getintouch_button {
+  border: 1px solid #ff7b47;
+  min-height: 44px;
+  color: #ff7b47;
+  line-height: 142%;
+  text-align: center;
+  font-weight: 600;
+  transition: all 0.3s ease 0s;
+  display: flex;
+  align-items: center;
+  padding: 5px 20px;
+  border-radius: 5px;
+}
+.item-getintouch_purp .item-getintouch_button {
+  border: 1px solid #fff;
+  color: #fff;
+}
+.item-getintouch_purp .item-getintouch_button:hover {
+  background-color: #fff;
+  color: #17213c;
+}
+
+.item-getintouch_button:hover {
+  background-color: #ff7b47;
+  color: #fff;
+}
+
+/*---CONTACT--------------------*/
+
+.contact {
+  background-color: #fff;
+  padding: 42px 0;
+}
+.contact_container {
+}
+
+@media (min-width: 767px) {
+  .contact_body {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .contact_content {
+    padding: 0 20px 0 0;
+  }
+}
+.contact_content {
+  padding-right: 20px;
+}
+.contact_title {
+  color: #17213c;
+  font-weight: 700;
+  letter-spacing: 0.1px;
+  font-size: 24px;
+  line-height: 133%;
+}
+.contact_title:not(:last-child) {
+  margin: 0 0 10px 0;
+}
+
+.contact_text {
+  color: #737373;
+  line-height: 142%;
+}
+.contact_button {
+  display: flex;
+  background-color: #ff7b47;
+  min-height: 58px;
+  color: #fff;
+  border-radius: 5px;
+  padding: 5px 40px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  transition: all 0.3s ease 0s;
+}
+.contact_button:hover {
+  background-color: #d36337;
 }
